--- a/css/styles.css
+++ b/css/styles.css
@@ -1,171 +1,7 @@
-/* Reset de estilos */
-body {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-/* Estilos para o cabeçalho */
-header {
-    background-color: #4CAF50; /* Verde */
-    padding: 20px;
-    text-align: center;
-}
-
-header h1 {
-    margin: 0;
-    color: #FFF; /* Branco */
-}
-
-/* Estilos para o menu */
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #FFF; /* Branco */
-}
-
-/* Estilos para as seções principais */
-section {
-    padding: 20px;
-    background-color: #F5F5F5; /* Cinza claro */
-}
-
-section h2 {
-    color: #333; /* Cinza escuro */
-}
-
-/* Estilos para a seção de pizzas */
-#menu {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #E0E0E0; /* Cinza */
-    padding: 20px; /* Adiciona espaçamento interno */
-}
-
-.row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-}
-
-.pizza {
-    border: 1px solid #666;
-    border-width: auto;
-    padding: 10px;
-    width: calc(50% - 10px);
-    box-sizing: border-box;
-    background-color: #FFF; /* Branco */
-}
-
-.pizza img {
+.fixed-header {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: auto;
-}
-
-.pizza h3, .pizza p {
-    margin: 0;
-}
-
-.text-pizza {
-    text-align: justify;
-    font-style: italic; /* Adiciona estilo itálico */
-}
-
-.comprar {
-    background-color: #4CAF50; /* Verde */
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 10px; /* Adicione um espaçamento superior para separar os botões */
-    cursor: pointer;
-    border-radius: 4px; /* Adicione bordas arredondadas */
-}
-
-.comprar:hover {
-    background-color: #45a049; /* Altera a cor de fundo quando o mouse passa por cima */
-}
-
-/* Estilos para a seção de bebidas */
-#drinks {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    background-color: #E0E0E0; /* Cinza */
-    padding: 20px; /* Adiciona espaçamento interno */
-}
-
-.drink {
-    border: 1px solid #666;
-    border-width: auto;
-    padding: 20px;
-    margin-bottom: 20px; /* Reduz o espaçamento inferior */
-    width: calc(33.33% - 40px);
-    box-sizing: border-box;
-    display: inline-block;
-    background-color: #FFF; /* Branco */
-}
-
-.drink img {
-    width: 70%;
-    height: auto;
-}
-
-/* Estilos para a seção "Sobre" */
-#about {
-    text-align: justify;
-    padding: 20px; /* Adiciona espaçamento interno */
-}
-
-/* Estilos para o rodapé */
-footer {
-    background-color: #4CAF50; /* Verde */
-    text-align: center;
-    padding: 20px; /* Aumenta o espaçamento interno */
-    color: #FFF; /* Branco */
-}
-
-/* Ajustes finais para tornar o site responsivo */
-
-@media screen and (max-width: 768px) {
-    .drink {
-        width: calc(50% - 20px);
-        padding: 10px;
-    }
-
-    .drink h3, .drink p {
-        font-size: 14px;
-    }
-
-    #menu {
-        display: block; /* Altera para display de bloco em telas menores */
-    }
-
-    .row {
-        flex-direction: column; /* Altera para layout de coluna em telas menores */
-    }
-
-    .pizza,
-    .drink {
-        width: 100%; /* Define a largura como 100% em telas menores */
-    }
-
-    .pizza h3,
-    .pizza p,
-    .drink h3,
-    .drink p {
-        margin: 10px 0; /* Adiciona margem interna em telas menores */
-    }
+    z-index: 100;
 }
